# borui

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  release-binary.yml
migrations/: 20250101000001_initial_schema.sql  20250101000002_servers.sql  20250101000003_clients.sql  20250101000004_sessions.sql  20250101000005_add_display_name.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: auth.rs  clients.rs  mod.rs  servers.rs  status.rs
src/db/: operations.rs
src/middleware/: auth.rs  mod.rs
src/models/: client.rs  mod.rs  server.rs  session.rs  user.rs
src/tunnel/: client_manager.rs  mod.rs  server_manager.rs  status.rs
src/web/: static_files.rs
src/webhook/: mod.rs  sender.rs
src/ws/: handler.rs  mod.rs
static/: index.html  login.html
static/css/: main.css
static/js/: api.js  app.js  clients.js  i18n.js  icons.js  servers.js  settings.js  toast.js  websocket.js
static/locales/: en.json  zh-CN.json  zh-TW.json
