[package]
name = "borui"
version = "0.1.7"
edition = "2024"

[dependencies]
# Core bore functionality
bore-cli = "0.6.0"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Async runtime (aligned with bore-cli)
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }

# Static file embedding
rust-embed = "8.0"
mime_guess = "2.0"

# Configuration
dotenvy = "0.15"

# Authentication
argon2 = "0.5"
jsonwebtoken = { version = "10.2", default-features = false, features = ["aws_lc_rs"] }
rand_core = { version = "0.6", features = ["std"] }

# Concurrent data structures
dashmap = "6.1"

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# URL parsing for webhook validation
url = "2.5"

# Template rendering
handlebars = "6.2"

[target.'cfg(unix)'.dependencies]
# Graceful shutdown (Unix only)
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
